--- a/package.json
+++ b/package.json
@@ -4,24 +4,35 @@
   "private": false,
   "bin": "./bin/cli.js",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.10.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "webpack-dev-server --mode=development --config webpack.dev.js",
-    "dev": "webpack --watch --config webpack.dev.js",
-    "build": "react-scripts build",
+    "dev": "webpack --watch --config webpack.config.js",
+    "build": "webpack  --config webpack.config.js",
     "test": "react-scripts test"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "copy-webpack-plugin": "^10.2.4",
@@ -34,6 +45,7 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
+    "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
